--- a/index.css
+++ b/index.css
@@ -6,7 +6,7 @@
 
 body{
   height: 100%;
-  border: solid;
+  width: auto;
 }
 
 .header{
@@ -43,7 +43,7 @@ body{
   display: none;
 }
 
-@media (min-width: 370px){
+@media (min-width: 768){
   .menu{
     display: flex;
     flex-direction: row;
@@ -87,7 +87,7 @@ body{
   width: 300px;
 }
 
-@media (min-width: 370px) {
+@media (min-width: 375px) {
   .bienvenida{
     display: flex;
     flex-direction: row;
@@ -148,7 +148,7 @@ body{
   margin-bottom: 10px;
 }
 
-@media (min-width: 370px) {
+@media (min-width: 375px) {
   
 .presentacion{
   display: flex;
@@ -220,7 +220,7 @@ body{
   margin: 0 20px 20px ;
 }
 
-@media (min-width: 370px){
+@media (min-width: 375px){
 
   .servicios{
     display: grid;
@@ -328,7 +328,7 @@ body{
   color: white;
 }
 
-@media (min-width: 370px) {
+@media (min-width: 375px) {
 
   .footer{
     display: flex;
