--- a/index.css
+++ b/index.css
@@ -43,7 +43,7 @@ body{
   display: none;
 }
 
-@media (min-width: 768){
+@media (min-width: 768px){
   .menu{
     display: flex;
     flex-direction: row;
